# ChangeLog for dev-tex/floatflt
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/floatflt/ChangeLog,v 1.10 2004/12/28 20:35:13 absinthe Exp $

  28 Dec 2004; Dylan Carlson <absinthe@gentoo.org> floatflt-1.31a.ebuild:
  Stable on amd64.

  17 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> floatflt-1.31a.ebuild:
  Blocks >=tetex-2.96.

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> floatflt-1.31a.ebuild:
  Added IUSE=.

  13 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> floatflt-1.31a.ebuild:
  marked ~amd64

  12 Jun 2003; <msterret@gentoo.org> floatflt-1.31a.ebuild:
  add Header

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*floatflt-1.31a (01 July 2002)

  01 July 2002; Felix Kurth <felix@fkurth,de> :
  
  Initial release


